# data_aggregator

./: .env.example  LICENSE  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dev_deploy.yml  dev_hard_down.yml  dev_soft_down.yml
docs/er-diagram/: v0.1.0-init.puml
nginx/dev/: nginx.conf
src/: Makefile  alembic.ini  main.py  pyproject.toml  setup.cfg
src/api/: __init__.py  router.py
src/api/v1/: __init__.py  auth.py
src/core/: config.py  constants.py  enums.py  exceptions.py
src/db/models/: __init__.py  base.py  example.py  mixins.py  purchase.py
src/db/repositories/: __init__.py  base.py  user.py
src/schemas/: __init__.py  base.py  example.py
src/services/: __init__.py
src/tests/: __init__.py  conftest.py  utils.py
src/tests/auth/factories/: example.py  fakers.py
src/tests/auth/test_integration/: example.py
