[tool.poetry]
name = "data-aggregator"
version = "0.1.0"
description = ""
authors = ["Eldar  <cooperative.entr@gmail.com>"]
readme = "README.md"
packages = [{include = "data_aggregator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
